add clone api
